# swarmify

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ProductionEnhancement_Summary.md  RandomSwarmAlgo.md
examples/: random_swarm_example.py
src/swarmify/: __init__.py  client.py
src/swarmify/algos/: __init__.py  base.py  iceberg.py  random_swarm.py  swarm_planner.py
src/swarmify/core/: __init__.py  models.py  types.py
src/swarmify/exchange/: __init__.py  base.py  ccxt_exchange.py
src/swarmify/execution/: __init__.py  oms.py  risk.py
src/swarmify/persistence/: __init__.py  store.py
src/swarmify/utils/: __init__.py  metrics.py  timeutil.py
tests/: conftest.py  test_client.py  test_iceberg.py  test_metrics.py  test_models.py  test_oms.py  test_pipeline.py  test_random_swarm.py  test_random_swarm_production.py  test_risk.py  test_store.py  test_swarm_planner.py
